AC_INIT( [main_production], [1.0], [roberto.rosende.dopazo@gmail.com] )
AM_INIT_AUTOMAKE( [foreign -Wall -Werror] )
AC_PROG_CC
LT_INIT(disable-shared)
AC_LANG([C])
AC_HEADER_STDC
AC_PROG_F77 AC_PROG_FC
AC_F77_WRAPPERS AC_FC_WRAPPERS
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADERS( [config.h] )
AC_CONFIG_FILES( [Makefile lib/Makefile src/Makefile] )
AC_OUTPUT

